# keylite

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  keylite.h  package.json  todo.md
.github/workflows/: ci.yml
bench_db/: sst-1.db
bench_test/: sst-1.db
bindings/js/: .gitignore  README.md  example.js  example.ts  index.ts  keylite-ffi.js  keylite-ffi.ts  keylite.js  keylite.ts  package-lock.json  package.json  test.ts
cli/: Cargo.toml  README.md
cli/something/: sst-1.db  sst-2.db
concurrency_test/: sst-10.db  sst-11.db  sst-13.db  sst-14.db  sst-17.db  sst-19.db  sst-21.db  sst-22.db  sst-23.db  sst-24.db  sst-25.db  sst-27.db  sst-28.db  sst-29.db  sst-30.db  sst-31.db  sst-35.db  sst-40.db  sst-9.db
db/: Cargo.toml
db/benches/: bench.rs  simple_test.rs
db/examples/: bench_index.rs  edge_cases.rs  final_benchmark.rs  full_demo.rs  index_perf_test.rs  large_bench.rs  micro_bench.rs  profile_perf.rs  serde_bench.rs  test_index.rs
db/src/: collection.rs  db.rs  error.rs  filter.rs  helper.rs  index.rs  lib.rs  main.rs  query.rs  transaction.rs
demo_db/: sst-1.db
ffi/: keylite-kv.h
final_bench/: sst-1.db
keylite/: Cargo.toml
keylite/concurrency_test/: sst-1.db
keylite/src/: lib.rs
keylite/src/compaction/: mod.rs  worker.rs
keylite/src/db/: config.rs
keylite/src/flush/: mod.rs  worker.rs
keylite/src/sst/: reader.rs
keylite/tests/: correctness_test.rs
kv/: Cargo.toml
perftest/: sst-1.db  sst-2.db
scan_test_db/: sst-1.db
src/: db.rs  error.rs  index.rs  lib.rs  segment.rs
test/: sst-3.db
tests/: correctness_test.rs
(+65 files in other folders)
