[package]
name = "keylite-db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
keylite-kv = { path = "../kv" }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
rand = "0.8"

[[bench]]
name = "bench"
harness = false
