[package]
name = "keylite-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crc32fast = "1.5.0"
crossbeam-channel = "0.5"
fastrand = "2.3.0"
memmap2 = "0.9"
parking_lot = "0.12"
rand = "0.9.2"
rustc-hash = "2.1"
arc-swap = "1.7"
dashmap = "6.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
